--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,7 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/next",
-      "config": {
-        "includeFiles": ["next.config.ts"]
-      }
+      "use": "@vercel/next"
     }
   ],
   "routes": [
@@ -16,7 +13,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/$1"
     }
   ]
 }
