--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "critters": "^0.0.20",
     "framer-motion": "^12.5.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
